<resources>
	<string name="app_name">HedgeCam 2</string>
	<string name="translation_author">Mark Harman, Caddish Hedgehog</string>
	<string name="about_credits">Based on Open Camera by Mark Harman\n\nReleased under the GPL v3 or later</string>
	<string name="intro_text">Touch to focus, and press the blue camera button to take photos. For more help, click Online help from Settings.\n\nPrivacy Policy: This application does not send personal data to third parties. Access to the camera, microphone, and location is only used for saving your photos and videos.</string>
	<string name="intro_ok">OK (This message won\'t show again)</string>
	<string name="charset">ISO-8859-1</string>
	<string name="answer_yes">Yes</string>
	<string name="answer_no">No</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="auto">Auto</string>
	<string name="default_str">Default</string>
	<string name="none">None</string>
	<string name="unlimited">Unlimited</string>
	<string name="device_default">Device default</string>
	<string name="if_necessary">If necessary</string>
	<string name="sorry">Sorry</string>
	<string name="choose_save_location">Choose save location:</string>
	<string name="clear_folder_history">Clear folder history</string>
	<string name="clear_folder_history_question">Clear folder history?</string>
	<string name="choose_another_folder">Choose another folder</string>
	<string name="changed_save_location">Changed save location to:</string>
	<string name="parent_folder">Parent Folder</string>
	<string name="new_folder">New Folder</string>
	<string name="cant_write_folder">Can\'t write to this folder</string>
	<string name="cant_access_folder">Can\'t access this folder</string>
	<string name="enter_new_folder">Enter new folder name</string>
	<string name="failed_create_folder">Failed to create folder</string>
	<string name="folder_exists">Folder already exists</string>
	<string name="saf_select_save_location">Select a save location</string>
	<string name="saf_cancelled">Storage Access Framework cancelled</string>
	<string name="saf_permission_failed">Can\'t save to this folder</string>
	<string name="angle">Angle</string>
	<string name="rotation">Rotation</string>
	<string name="direction">Direction</string>
	<string name="zoom">Zoom</string>
	<string name="free_memory">Free</string>
	<string name="iso">ISO</string>
	<string name="fps">FPS</string>
	<string name="iso_manual">Manual mode</string>
	<string name="camera">Camera</string>
	<string name="photo">Photo</string>
	<string name="video">Video</string>
	<string name="action_popup">Popup settings</string>
	<string name="action_settings">Settings</string>
	<string name="audio_control_start">Start audio listening</string>
	<string name="audio_control_stop">Stop audio listening</string>
	<string name="back_camera">Back Camera</string>
	<string name="disable_face_detection">Disable face detection</string>
	<string name="enable_face_detection">Enable face detection</string>
	<string name="exposure">Exposure</string>
	<string name="front_camera">Front Camera</string>
	<string name="gallery">Gallery</string>
	<string name="pause_video">Pause video recording</string>
	<string name="record_video">Record video</string>
	<string name="resume_video">Resume video recording</string>
	<string name="selfie_mode_start">Start selfie mode</string>
	<string name="selfie_mode_stop">Stop selfie mode</string>
	<string name="share">Share Photo</string>
	<string name="start_video">Start recording video</string>
	<string name="stop_timer">Stop timer</string>
	<string name="stop_video">Stop recording video</string>
	<string name="switch_to_back_camera">Switch to back camera</string>
	<string name="switch_to_front_camera">Switch to front camera</string>
	<string name="switch_to_photo">Switch to photo mode</string>
	<string name="switch_to_video">Switch to video mode</string>
	<string name="take_photo">Take Photo</string>
	<string name="take_video">Take Video</string>
	<string name="trash">Delete Last Picture</string>
	<string name="high_speed">High Speed</string>
	<string name="preference_video_capture_rate">Speed</string>
	<string name="screen_lock_message_1">LOCKED</string>
	<string name="screen_lock_message_2">Swipe to unlock</string>
	<string name="waiting_for_face">Waiting for face detection…</string>
	<string name="audio_disabled">Audio disabled</string>
	<string name="audio_listener_started">Make a loud noise</string>
	<string name="auto_adjustment_locked">Auto adjustment locked</string>
	<string name="auto_adjustment_unlocked">Auto adjustment unlocked</string>
	<string name="cancelled_burst_mode">Cancelled burst mode</string>
	<string name="cancelled_timer">Cancelled timer</string>
	<string name="capturing">Capturing…</string>
	<string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
	<string name="location_not_available">GPS location not available</string>
	<string name="max_duration">Max duration</string>
	<string name="max_filesize">Max file size</string>
	<string name="no_gallery_app">No gallery app available</string>
	<string name="photo_deleted">Photo deleted</string>
	<string name="repeats_to_go">repeats to go</string>
	<string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
	<string name="speech_recognizer_started">Say \"cheese\"</string>
	<string name="started_recording_video">Started recording video</string>
	<string name="started_timer">Started timer</string>
	<string name="stopped_recording_video">Stopped recording video</string>
	<string name="taking_photo">Taking photo</string>
	<string name="unlocked">Unlocked</string>
	<string name="video_max_duration">Video reached max duration</string>
	<string name="video_max_filesize">Video reached max file size</string>
	<string name="video_pause">Video paused</string>
	<string name="video_resume">Video resumed</string>
	<string name="backup_file_saved">Backup file was saved succesfully</string>
	<string name="settings_file_saved">Settings file was saved succesfully</string>
	<string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
	<string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
	<string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
	<string name="audio_listener_failed">Failed to initalise audio listening</string>
	<string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
	<string name="camera_error">Serious camera error</string>
	<string name="failed_to_auto_stabilise">Failed to auto-level</string>
	<string name="failed_to_record_video">Failed to record video</string>
	<string name="failed_to_save_photo">Failed to save photo</string>
	<string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
	<string name="failed_to_save_video">Failed to save video file</string>
	<string name="failed_to_stamp">Failed to stamp info to photo</string>
	<string name="failed_to_start_camera_preview">Failed to start camera preview</string>
	<string name="failed_to_process_hdr">Failed to create HDR image</string>
	<string name="failed_to_take_picture">Failed to take picture</string>
	<string name="not_supported">not supported on your device</string>
	<string name="video_error_server_died">Server died, video halted</string>
	<string name="video_error_unknown">Unknown error, video halted</string>
	<string name="video_may_be_corrupted">Error, video file may be corrupted</string>
	<string name="video_no_free_space">Not enough free space to record video</string>
	<string name="video_power_critical">Video stopped\nBattery level critically low</string>
	<string name="focus_bracketing_range_not_defined">Focus bracketing range not defined</string>
	<string name="speech_recognizer_unavailable">Speech recognizer unavailable</string>
	<string name="open_files_saf_exception_ghost">No file dialog found on this device, ghost image option is not supported</string>
	<string name="saf_permission_failed_open_image">Unable to open this image</string>
	<string name="failed_to_save_file">Failed to save the file</string>
	<string name="failed_to_read_file">Failed to read the file</string>
	<string name="failed_to_restore_from_backup">Failed to restore settings from the backup file</string>
	<string name="failed_to_import_settings">Failed to import settings from the file</string>
	<string name="no_permission">PERMISSIONS NOT AVAILABLE</string>
	<string name="permission_record_audio_not_available">Microphone permission is not available</string>
	<string name="permission_location_not_available">Location permission is not available</string>
	<string name="permission_rationale_title">Permission required</string>
	<string name="permission_rationale_camera">Camera permission is required to enable the camera</string>
	<string name="permission_rationale_storage">Storage read/write permission is required to save photos</string>
	<string name="permission_rationale_record_audio">Microphone permission is required to record video with audio</string>
	<string name="permission_rationale_location">Location permission is required for geotagging</string>
	<string name="auto_stabilise_info">Auto-level will automatically rotate photos so that they appear level.\n\nNote that this means images will come out a slightly lower resolution (due to the rotation and cropping that\'s required).</string>
	<string name="raw_info">DNG files contain the full uncompressed and unprocessed information from your camera.\n\nMost gallery apps won\'t recognise DNG, instead they should be used with specialised apps like Snapseed or Lightroom.\n\nNote that various processing options such as "Stamp photos" and "Auto-level" will only apply to the JPEG images, and not the DNG images.\n\nDNG files take up a lot of space; a file explorer app may be useful for transferring or deleting them.\n\nDNG files are only saved in Standard or DRO photo modes.</string>
	<string name="hdr_info">HDR mode is useful for shots with a large variation in brightness. It works by taking multiple shots at different exposures, and combining them to create the final image.\n\nNote that HDR is not suitable for scenes with fast movement, and may result in less accurate colour reproduction.\n\nTaking photos in HDR mode will be slower.</string>
	<string name="preference_reset_question">Are you sure you want to reset all settings to default?</string>
	<string name="preference_restore_question">Are you sure you want to restore all settings from the file? All current settings will be overwritten!</string>
	<string name="preference_import_question">Are you sure you want to import settings from the file? Some settings will be overwritten!\n\nIf this settings file was created on another device, it is strongly recommended to backup all settings before importing.</string>
	<string name="dont_show_again">Don\'t show again</string>
	<string name="histogram_surface_question">Histogram display does not work when using SurfaceView. Do you want to change the preview surface to TextureView?</string>
	<string name="overwrite_file_question">A file with the same name already exists. Do you really want to overwrite it?</string>
	<string name="mb_abbreviation">MB</string>
	<string name="gb_abbreviation">GB</string>
	<string name="metres_abbreviation">m</string>
	<string name="centimetres_abbreviation">cm</string>
	<string name="seconds_abbreviation">s</string>
	<string name="focus_distance">Focus distance</string>
	<string name="photo_mode">Photo Mode</string>
	<string name="flash_mode">Flash Mode</string>
	<string name="focus_mode">Focus Mode</string>
	<string name="scene_mode">Scene mode</string>
	<string name="white_balance">White balance</string>
	<string name="color_effect">Color effect</string>
	<string name="exposure_compensation">Exposure compensation</string>
	<string name="auto_adjustment_lock">Auto adjustment lock</string>
	<string name="expo_metering_area">Exposure metering area</string>
</resources>