<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity" >

	<FrameLayout
		android:id="@+id/preview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		/>
		
	<FrameLayout
		android:id="@+id/overlay_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/preview"
		android:layout_alignTop="@+id/preview"
		android:layout_alignRight="@+id/preview"
		android:layout_alignBottom="@+id/preview">

		<ImageView
			android:id="@+id/overlay"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scaleType="centerCrop"
			android:visibility="gone"
			/>
	</FrameLayout>

	
	<ImageButton
		android:id="@+id/take_photo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="0dp"
		android:scaleType="fitCenter"
		android:contentDescription="@string/take_photo"
		android:background="@drawable/shutter_photo_selector"
		android:onClick="clickedTakePhoto"
		/>

	<include layout="@layout/seekbars" />

	<ImageButton
		android:id="@+id/gallery"
		android:layout_width="@dimen/button_gallery_size"
		android:layout_height="@dimen/button_gallery_size"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:padding="@dimen/button_gallery_padding"
		android:scaleType="fitCenter"
		android:contentDescription="@string/gallery"
		android:src="@drawable/gallery_blank"
		android:onClick="clickedGallery"
		android:background="@drawable/gallery_bg"
		style="?android:attr/borderlessButtonStyle"
		/>

	<ImageButton
		android:id="@+id/switch_video"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:padding="10dp"
		android:scaleType="fitCenter"
		android:contentDescription="@string/switch_to_video"
		android:src="@drawable/main_videocam"
		android:onClick="clickedSwitchVideo"
		style="?android:attr/borderlessButtonStyle"
		/>

	<include layout="@layout/ctrl_panel" />

	<ImageButton
		android:id="@+id/pause_video"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="0px"
		android:scaleType="fitCenter"
		android:contentDescription="@string/pause_video"
		android:src="@drawable/pause_selector"
		android:background="@null"
		android:onClick="clickedPauseVideo"
		/>

	<ImageButton
		android:id="@+id/trash"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:scaleType="fitCenter"
		android:contentDescription="@string/trash"
		android:src="@drawable/main_delete"
		android:onClick="clickedTrash"
		android:visibility="gone"
		style="?android:attr/borderlessButtonStyle"
		/>

	<ImageButton
		android:id="@+id/share"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:scaleType="fitCenter"
		android:contentDescription="@string/share"
		android:src="@drawable/main_share"
		android:onClick="clickedShare"
		android:visibility="gone"
		style="?android:attr/borderlessButtonStyle"
		/>

	<FrameLayout
		android:id="@+id/locker"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		/>

	<ScrollView
		android:id="@+id/popup_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		/>
	
	<ScrollView
		android:id="@+id/hide_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		/>

	<FrameLayout
		android:id="@+id/front_flash"
		android:background="@android:color/white"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone"
		/>

	<FrameLayout
		android:id="@+id/prefs_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_centerInParent="true"
		/>
	
</RelativeLayout>
